--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p>This is a test rep</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, sed.</p>
         <p>new words</p>
+        <p>more words</p>
 
         <!-- TODO - ADD MORE CONTENT -->
     </div>
